# SWE-Review

./: .gitignore  LICENSE  README.md  dataset_info.json  index.html
SWE-Review-Bench/: README.md  aggregate_results.py  compute_da.py  compute_metrics.sh  compute_rrr.py  reverify_revision.py  run_agentic_review.sh  run_full_benchmark.sh  run_revision.sh  run_single_turn_review.py  run_single_turn_review.sh  serve_example_qwen3_coder.sh  utils.py
configs/: mixed_6k_8b.yaml  swe_review_30b_a3b.yaml  swe_review_8b.yaml
harbor/: README.md  USAGE.md
harbor/adapters/swerebench/: README.md  adapter.py  adapter_metadata.json  pyproject.toml  run_adapter.py  swerebench.yaml  utils.py
harbor/adapters/swerebench/template/: Dockerfile  solve.sh  task.toml  test.sh
harbor/configs_example/: harbor_example.yaml
harbor/tasks/patchgen/: instruction.md  task.toml
harbor/tasks/review/: instruction.md
harbor/tasks/revision/: instruction.md
prompts/: agentic_review.md  patchgen.md  revision_with_feedback.md  single_turn_review_diff_only.md  single_turn_review_with_context.md
scripts/: iterative_tts.py
scripts/data_pipeline/: README.md  _swebench_utils.py  _utils.py  download_data.py  extract_patches.py  generate_patchgen_tasks.py  generate_review_tasks.py  prepare_review_sft_data.py
scripts/train/: README.md
scripts/train/mixed_training/: serve_vllm.sh  sft.sh
scripts/train/swe_review_30b_a3b/: eval.sh  review.sh  serve_vllm.sh  sft.sh
scripts/train/swe_review_8b/: eval.sh  review.sh  serve_vllm.sh  sft.sh
static/js/: index.js
(+10 files in other folders)
